--- a/block-list.html
+++ b/block-list.html
@@ -8,7 +8,7 @@
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   
-      <title>Block list</title>
+      <title>List of Blocks</title>
 
       <script>
           function getUrlVars() {
@@ -54,7 +54,6 @@
 
             document.getElementById("block-list").innerHTML = blockListHTML;
 
-
             }
         };
         xmlhttp.open("GET", "map-data.json", true);
@@ -71,14 +70,14 @@
     </header>
 
     <main role="main">
+      <h1 id="mapNumber"></h1>
       <ul id="block-list" class="list-group"></ul>
     </main>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script>
-      document.getElementById("mapNumber").innerHTML = "Map " + mapNumber;
-      document.title = "Map " + mapNumber + " | Block list";
+      document.getElementById("mapNumber").innerHTML = "Map " + mapNumber; 
     </script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
