move json map list to admin folder

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             }
         };
-        xmlhttp.open("GET", "map-list.json", true);
+        xmlhttp.open("GET", "admin/map-list.json", true);
         xmlhttp.send();
       </script>
   </head>
