--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     <main role="main">
       <div id="map-list">
       </div>
+    </main>
 
     <footer class="text-muted bg-light py-2">
         <p class="text-center">
