--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     <main role="main">
       <div class="container">
         <h5 class="pt-3">What is the At Homes web app?</h5>
-        <p>At Homes is a purpose built we application to assist in the work of covering the congregation territory.</p>
+        <p>At Homes is a purpose built web application to assist in the work of covering the congregation territory.</p>
         <p>To learn more or use for your congregation, please contact the team <a href="whatsapp://chat?code=ALhU5zMyOlu82xhiHwi8UV">here</a>.</p> 
       </div>
     </main>
