Add linl to group chat

--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
 
     <footer class="text-muted bg-light py-2">
         <p class="text-center">
-          <a href="admin">Admin</a> | 
-          <a href="about.html">About</a>
+          <a href="about.html">About</a> | 
+          <a href="whatsapp://chat?code=ALhU5zMyOlu82xhiHwi8UV">Help (WhatsApp Group)</a> <span><i class="fas fa-external-link-alt"></i></span>
+          
         </p>
     </footer>
 
